# entity-core-py

./: .dockerignore  .gitignore  AGENTS.md  CANONICAL-DOCS.toml  Dockerfile  Makefile  README.md  pyproject.toml
docs/: CLI.md  HANDLER-ARCHITECTURE.md  VALIDATING.md
docs/status/: STATUS.md
examples/: rust_interop.py  test_caveats.py  test_delegation.py  test_delegation_chain.py  test_delegation_simple.py
scripts/: fetch_published_fixture.py
test-vectors/v1/: conformance-vectors-v1.diag  emit-py.cbor
tests/: test_compute.py  test_entity_native_dispatch.py  test_grant_signing.py  test_handlers_handler.py  test_tree_walk_dispatch.py
tests/integration/: test_authenticated.py  test_authz_error_codes_v7_71.py  test_capability_handler.py  test_chain_error_marker_v120.py  test_cli.py  test_cli_http_listener.py  test_cli_http_poll.py  test_compute_apply_entity_native.py  test_conformance_validate_handlers.py  test_connect.py  test_connection_multiplex.py  test_connection_robustness.py  test_continuation_cross_peer.py  test_continuation_handler.py  test_convergent_mirror.py  test_cross_impl_publish_fetch.py  test_cross_peer_subscription_over_http.py  test_discovery.py  test_discovery_conformance.py  test_discovery_mdns.py  test_dispatch_surface_equivalence.py  test_durability_contract.py  test_ed448_handshake.py  test_emit_integration.py  test_encryption_conformance.py  test_envelope_ingest_dedup_class_h_g3.py  test_execute.py  test_fetch_diff_merge_roundtrip.py  test_handler_registration.py  test_http_live_transport.py  test_http_poll_outbound.py  test_identity_v32.py  (+30 more)
(+73 files in other folders)
